--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="test.css">
 </head>
 <style>
     td{
@@ -149,7 +150,8 @@
         costum<input type="radio" id="gender" name="gender"><br>  
         <button type="submit" si>Sign up</button>
     </form>
-    <h1>hello</h1>
+<h2>heheh</h2>
+<h4>hoho</h4>
 </center>
 </body>
 </html>
